--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -17,3 +17,23 @@
 <!-- 🐨 Append the div to the root div using `append` -->
 <!--   💰 document.getElementById('root') -->
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>React Fundamental</title>
+  </head>
+  <body>
+    <script type="module">
+    const rootElement = document.createElement('div')
+    rootElement.id = 'root'
+    document.body.append(rootElement)
+      const divElement = document.createElement('div')
+      divElement.textContent = 'Soufiane chaoufi'
+      document.getElementById('root').append(divElement)
+    </script>
+  </body>
+</html>
