proptypes and custom component

--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -11,8 +11,8 @@
     function Message({children}) {
       return <div className="message">{children}</div>
     }
-    Message.prototypes={
-      children: PropTypes.string.isRequired
+    Message.prototypes = {
+      children: PropTypes.string.isRequired,
     }
 
     const element = (
